# episodic-memory

./: .gitignore  IMPLEMENTATION_TRACKER.md  README.md  SAMPLE_SCRIPT.py  pyproject.toml  requirements.txt
UnitySensorSim/: README.md
UnitySensorSim/Assets/: FloorMaterial.mat  Mat_Wall_Hallway.mat  Mat_Wall_Kitchen.mat  Mat_Wall_Living.mat
UnitySensorSim/ProjectSettings/: ProjectSettings.asset
UnitySensorSim/UserSettings/: EditorUserSettings.asset
UnitySensorSim/protocol/: command_schema.json  sensor_frame_schema.json
UnitySensorSim/python_client/: sensor_client.py
dashboard/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
docs/: CLI.md  INVARIANTS.md  PHASE6.md  PROTOCOL_INVARIANT.md  README.md  TROUBLESHOOTING.md  VISUALIZATION.md
docs/architecture/: DATA_CONTRACTS.md  INTERFACES.md  README.md
docs/modules/: BOUNDARY.md  MEMORY.md  README.md  SENSOR_GATEWAY.md
docs/panorama/: README.md
docs/scenarios/: CUSTOM.md  README.md
docs/unity/: CAMERAS.md  PROTOCOL.md  SETUP.md  UI.md
tests/: conftest.py  test_acf_stability.py  test_api_server.py  test_consolidation.py  test_core.py  test_cued_recall.py  test_delta_events.py  test_event_pipeline.py  test_integration.py  test_investigation.py  test_label_learning.py  test_memory.py  test_memory_integrator.py  test_modules.py  test_panorama.py  test_phase2.py  test_phase3_data_flow.py  test_phase4.py  test_phase4_introspection.py  test_phase5.py  test_protocol.py  test_schemas.py  test_spatial.py  test_visual_channel.py  test_visualization.py
(+151 files in other folders)
