[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "episodic-agent"
version = "0.1.0"
description = "Event-segmented episodic memory system for autonomous agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Zachary Sturman" }
]
dependencies = [
    "pydantic>=2.0",
    "typer[all]>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
episodic-agent = "episodic_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/episodic_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
